# yolov10-ncnn-rpi5

./: .gitignore  README.md  run.sh
.github/workflows/: build-convert.yml  lint.yml
patches/: pnnx-topk-fix.patch
rpi/: CMakeLists.txt  yolov10_bench.cpp
scripts/: 0_setup.sh  1_export_onnx.sh  2_pnnx_convert.sh  3_deploy_rpi5.sh  lint.sh
